--- a/pom.xml
+++ b/pom.xml
@@ -359,7 +359,7 @@
     </repositories>
 
     <profiles>
-        <profile>
+        <profile><!-- debug -->
             <id>debug</id>
             <properties>
                 <jvm.args.debug>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=5050</jvm.args.debug>
@@ -367,7 +367,7 @@
         </profile>
 
         <!-- Releasing to Maven Central -->
-        <profile>
+        <profile><!-- release -->
             <id>release</id><!-- Was named "ossrh", but then this happened:
                 The requested profile "release" could not be activated because it does not exist.
                 Failed to execute goal org.sonatype.plugins:nexus-staging-maven-plugin:1.6.8:deploy (injected-nexus-deploy) on project csv-cruncher: Remote staging failed: Staging rules failure!
